# cmakeCudaTemplate

./: CMakeLists.txt  README.md  config.cmake
cmake/: FindCUDA.cmake
include/: foo.h
src/core/: main.cpp
src/cuda/: foo.cu
